update link project icon

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <span class="tech">Javascript</span>
                                 <a href="https://worklist-777.netlify.app/"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                                 <span class="tech">CSS</span>
                                 <span class="tech">Javascript</span>
                                 <a href="https://kevnftpage.netlify.app/" class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                                 <span class="tech">Javascript</span>
                                 <a href="https://alura-test-encriptador.netlify.app/"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                                 <span class="tech">Chakra UI</span>
                                 <a href="https://wanner-service777.netlify.app/"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
 
                                 <a href="https://weighttracker77.netlify.app/"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                                 <span class="tech">Next</span>
                                 <a href="https://apiusers-77.netlify.app/"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                                 <span class="tech">Javascript</span>
                                 <a href="https://presupuestoapp12.netlify.app/"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -228,7 +228,7 @@
                                 <span class="tech">Vite</span>
                                 <a href="https://tic-tac-toe-77.netlify.app"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                                 <span class="tech">Javascript</span>
                                 <a href="https://text-to-speech-kev.netlify.app/"
                                     class="projects__button button button__small">
-                                    <i class="ri-link"></i>
+                                    <i class="fa-solid fa-link"></i>
                                 </a>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                         <div class="skills__box">
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-html5"></i>
+                                    <i class="fa-brands fa-html5 fa-beat"></i>
 
                                     <div>
                                         <h3 class="skills__name">HTML</h3>
@@ -270,7 +270,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-css3"></i>
+                                    <i class="fa-brands fa-css3 fa-beat"></i>
 
                                     <div>
                                         <h3 class="skills__name">CSS</h3>
@@ -279,7 +279,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-js"></i>
+                                    <i class="fa-brands fa-js fa-beat"></i>
 
                                     <div>
                                         <h3 class="skills__name">JavaScript</h3>
@@ -290,7 +290,7 @@
 
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-react"></i>
+                                    <i class="fa-brands fa-react fa-beat"></i>
 
                                     <div>
                                         <h3 class="skills__name">React.js</h3>
@@ -299,7 +299,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-bootstrap"></i>
+                                    <i class="fa-brands fa-bootstrap fa-beat"></i>
 
                                     <div>
                                         <h3 class="skills__name">Bootstrap</h3>
@@ -308,7 +308,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-github"></i>
+                                    <i class="fa-brands fa-github fa-beat"></i>
 
 
                                     <div>
