--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
                     <a href="https://www.linkedin.com/in/kevin-l%C3%B3pez-meza-5b3a3a213/" target="_blank"
                         class="profile__social-link">
-                        <i class="ri-linkedin-box-line"></i>
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                     <a href="https://github.com/KevHLJob" target="_blank" class="profile__social-link">
-                        <i class="ri-github-line"></i>
+                        <i class="fa-brands fa-square-github"></i>
                     </a>
                 </ul>
             </div>
@@ -261,7 +261,7 @@
                         <div class="skills__box">
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-html5 fa-beat"></i>
+                                    <i class="fa-brands fa-html5 "></i>
 
                                     <div>
                                         <h3 class="skills__name">HTML</h3>
@@ -270,7 +270,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-css3 fa-beat"></i>
+                                    <i class="fa-brands fa-css3"></i>
 
                                     <div>
                                         <h3 class="skills__name">CSS</h3>
@@ -279,7 +279,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-js fa-beat"></i>
+                                    <i class="fa-brands fa-js"></i>
 
                                     <div>
                                         <h3 class="skills__name">JavaScript</h3>
@@ -290,7 +290,7 @@
 
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-react fa-beat"></i>
+                                    <i class="fa-brands fa-react"></i>
 
                                     <div>
                                         <h3 class="skills__name">React.js</h3>
@@ -299,7 +299,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-bootstrap fa-beat"></i>
+                                    <i class="fa-brands fa-bootstrap"></i>
 
                                     <div>
                                         <h3 class="skills__name">Bootstrap</h3>
@@ -308,7 +308,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="fa-brands fa-github fa-beat"></i>
+                                    <i class="fa-brands fa-github"></i>
 
 
                                     <div>
