update projects, add kevblog, tracker streaming

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img loading="lazy" src="./Img/Tictactoe-react.png" alt="Aplicacion web de juego"
+                        <img loading="lazy" src="./Img/Tictactoe-react.png" alt="Aplicacion web de juego gato"
                             class="projects__img">
 
                         <div class="projects__modal">
@@ -232,17 +232,34 @@
                         </div>
                     </article>
                     <article class="projects__card">
-                        <img loading="lazy" src="./Img/text-to-speech.png"
-                            alt="Aplicacion web que lee lo que se escribe por voz" class="projects__img">
+                        <img loading="lazy" src="./Img/Tracker-Streaming.png"
+                            alt="Organizador de subscripciones de plataformas de Streaming" 
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
-                                <h3 class="projects__title">Text to Speech</h3>
-                                <span class="tech">HTML</span>
+                                <h3 class="projects__title">Tracker-Streaming</h3>
+                                <span class="tech">React</span>
                                 <span class="tech">CSS</span>
-                                <span class="tech">Javascript</span>
-                                <a href="https://text-to-speech-kev.netlify.app/"
+                                <a href="https://tracker-streaming7.netlify.app/"
+                                    class="projects__button button button__small">
+                                    <i class="fa-solid fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="projects__card">
+                        <img loading="lazy" src="./Img/KevBlog.png"
+                            alt="Blog personal de KevDev muestra temas de tecnologías" class="projects__img">
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Kev Blog</h3>
+                                <span class="tech">Next</span>
+                                <span class="tech">Markdown</span>
+                                <a href="https://blog-kevdev.vercel.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
                                 </a>
