modify colors, and align text

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                                 <span class="tech">HTML</span>
                                 <span class="tech">CSS</span>
                                 <span class="tech">Javascript</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://worklist-777.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -114,6 +115,7 @@
                                 <span class="tech">HTML</span>
                                 <span class="tech">CSS</span>
                                 <span class="tech">Javascript</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://kevnftpage.netlify.app/" class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
                                 </a>
@@ -132,6 +134,7 @@
                                 <span class="tech">HTML</span>
                                 <span class="tech">CSS</span>
                                 <span class="tech">Javascript</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://alura-test-encriptador.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -149,6 +152,7 @@
                                 <h3 class="projects__title">Service WSD</h3>
                                 <span class="tech">Next</span>
                                 <span class="tech">Chakra UI</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://wanner-service777.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -168,7 +172,7 @@
                                 <span class="tech">Vite</span>
                                 <span class="tech">Vue.js</span>
                                 <span class="tech">Chart.js</span>
-
+                                <p>Proyecto⬇</p>
                                 <a href="https://weighttracker77.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -187,6 +191,7 @@
                                 <h3 class="projects__title">Users Reqres API</h3>
                                 <span class="tech">React</span>
                                 <span class="tech">Next</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://apiusers-77.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -206,6 +211,7 @@
                                 <span class="tech">HTML</span>
                                 <span class="tech">CSS</span>
                                 <span class="tech">Javascript</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://presupuestoapp12.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -224,6 +230,7 @@
                                 <h3 class="projects__title">Tic tac toe Game</h3>
                                 <span class="tech">React</span>
                                 <span class="tech">Vite</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://tic-tac-toe-77.netlify.app"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -242,6 +249,7 @@
                                 <h3 class="projects__title">Tracker-Streaming</h3>
                                 <span class="tech">React</span>
                                 <span class="tech">CSS</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://tracker-streaming7.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
@@ -259,6 +267,7 @@
                                 <h3 class="projects__title">Kev Blog</h3>
                                 <span class="tech">Next</span>
                                 <span class="tech">Markdown</span>
+                                <p>Proyecto⬇</p>
                                 <a href="https://blog-kevdev.vercel.app/"
                                     class="projects__button button button__small">
                                     <i class="fa-solid fa-link"></i>
